--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Our Menu</a></li>
         <li><a href="#">Happy Hour</a></li>
-        <li><a href="#"><img src="" alt=""></a></li>
+        <li><a href="#"><img src="img/logo.png" alt=""></a></li>
         <li><a href="#">Catering</a></li>
         <li><a href="#">Reservation</a></li>
         <li><a href="#">Gallery</a></li>
