--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-
+    <div class="green-dome"></div>
   </div>
 </body>
 </html>
