add homepage background div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Street Food</title>
 </head>
 <body>
+  <div id="background"></div>
   <div class="container">
+    
     <nav>
 
       <ul>
