add the eclipse containing food items

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <div class="green-dome"></div>
+    <div class="green-dome">
+      <div class="food-dome"></div>
+    </div>
   </div>
 </body>
 </html>
