add food images and position them at the border of the food dome

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
       </ul>
     </nav>
     <div class="green-dome">
-      <div class="food-dome"></div>
+      <div class="food-dome">
+        <img id="food1" src="img/image 1.png" alt="">
+        <img id="food2" src="img/image 2.png" alt="">
+        <img id="food3" src="img/image 3.png" alt="">
+        <img id="food4" src="img/image 5.png" alt="">
+        <img id="food5" src="img/image 6.png" alt="">
+      </div>
     </div>
   </div>
 </body>
