--- a/index.html
+++ b/index.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <title>Street Food</title>
-</head>
-<body>
-  <div id="background"></div>
-  <div class="container">
-    
-    <nav>
-
-      <ul>
-
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Our Menu</a></li>
-        <li><a href="#">Happy Hour</a></li>
-        <li><a href="#"><img class="logo" src="img/logo.png" alt=""></a></li>
-        <li><a href="#">Catering</a></li>
-        <li><a href="#">Reservation</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="green-dome">
-      <div class="food-dome">
-        <img id="food1" src="img/image 1.png" alt="">
-        <img id="food2" src="img/image 2.png" alt="">
-        <img id="food3" src="img/image 3.png" alt="">
-        <img id="food4" src="img/image 5.png" alt="">
-        <img id="food5" src="img/image 6.png" alt="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <title>Street Food</title>
+  </head>
+  <body>
+    <div id="background"></div>
+    <div class="container">
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Our Menu</a></li>
+          <li><a href="#">Happy Hour</a></li>
+          <li>
+            <a href="#"><img class="logo" src="img/logo.png" alt="" /></a>
+          </li>
+          <li><a href="#">Catering</a></li>
+          <li><a href="#">Reservation</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="green-dome">
+        <div class="food-dome">
+          <img id="food1" src="img/image 1.png" alt="" />
+          <img id="food2" src="img/image 2.png" alt="" />
+          <img id="food3" src="img/image 3.png" alt="" />
+          <img id="food4" src="img/image 5.png" alt="" />
+          <img id="food5" src="img/image 6.png" alt="" />
+        </div>
+      </div>
+      <div class="intro_paragraph">
+        <h1>Street Food</h1>
+        <h3>We don't play with food</h3>
+        <p>
+          When I was a small boy, my father told me never to recommend a church
+          or a woman to anyone. And I have found it wise never to recommend a
+          restaurant either. Something always goes wrong with the cheese souffl'e.
+        </p>
+        <button id="order_button">Order Now</button>
       </div>
     </div>
-  </div>
-  <div class="center-image"><img src="img/pivot_image.png" alt=""></div>
-</body>
+    <div class="center-image"><img src="img/pivot_image.png" alt="" /></div>
+    <div id="eat_together"></div>
+  </body>
 </html>
