add eat together div and image

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
       </div>
     </div>
     <div class="center-image"><img src="img/pivot_image.png" alt="" /></div>
-    <div id="eat_together"></div>
+    <div id="eat_together">
+
+      <img src="img/eating_together.png" alt="people eating together">
+      <div class="eat_together_description">
+        <h1>Eat together </h1>
+        <p>There is something profound</p>
+
+      </div>
+    </div>
   </body>
 </html>
