--- a/index.html
+++ b/index.html
@@ -41,20 +41,33 @@
         <p>
           When I was a small boy, my father told me never to recommend a church
           or a woman to anyone. And I have found it wise never to recommend a
-          restaurant either. Something always goes wrong with the cheese souffl'e.
+          restaurant either. Something always goes wrong with the cheese
+          souffl'e.
         </p>
         <button id="order_button">Order Now</button>
       </div>
     </div>
     <div class="center-image"><img src="img/pivot_image.png" alt="" /></div>
     <div id="eat_together">
-
-      <img src="img/eating_together.png" alt="people eating together">
-      <div class="eat_together_description">
-        <h1>Eat together </h1>
-        <p>There is something profound</p>
-
+      <img src="img/eating_together.png" alt="people eating together" />
+      <div id="eat_together_description">
+        <h1>Eat together</h1>
+        <p>
+          There is something profoundly satisfying about sharing a meal. Eating
+          together, breaking bread together, is one of the oldest and most
+          fundamentally unifying of human experiences.
+        </p>
       </div>
     </div>
+    <div class="burger_menu">
+      <h1>Explore Menu</h1>
+      <div id="burger_row_1">
+        <h2>Burger Name</h2>
+        <p>
+          There is something profoundly satisfying about sharing a meal.</p>
+          <img src="img/meat_burger.png" alt="meat burger">
+      </div>
+    </div>
+
   </body>
 </html>
