add css rule to display to burger items in flex

--- a/index.html
+++ b/index.html
@@ -61,13 +61,38 @@
     </div>
     <div class="burger_menu">
       <h1>Explore Menu</h1>
-      <div id="burger_row_1">
-        <h2>Burger Name</h2>
-        <p>
-          There is something profoundly satisfying about sharing a meal.</p>
-          <img src="img/meat_burger.png" alt="meat burger">
+      <div id="burger_rows">
+        <div id=burger_1>
+          <h2>Burger Name</h2>
+          <p>There is something profoundly satisfying about sharing a meal.</p>
+          <img src="img/meat_burger.png" alt="meat burger" />
+        </div>
+        <div id=burger_2>
+          <h2>Burger Name</h2>
+          <p>There is something profoundly satisfying about sharing a meal.</p>
+          <img src="img/meat_burger.png" alt="meat burger" />
+        </div>
+        <div id=burger_3>
+          <h2>Burger Name</h2>
+          <p>There is something profoundly satisfying about sharing a meal.</p>
+          <img src="img/meat_burger.png" alt="meat burger" />
+        </div>
+        <div id=burger_1>
+          <h2>Burger Name</h2>
+          <p>There is something profoundly satisfying about sharing a meal.</p>
+          <img src="img/meat_burger.png" alt="meat burger" />
+        </div>
+        <div id=burger_2>
+          <h2>Burger Name</h2>
+          <p>There is something profoundly satisfying about sharing a meal.</p>
+          <img src="img/meat_burger.png" alt="meat burger" />
+        </div>
+        <div id=burger_3>
+          <h2>Burger Name</h2>
+          <p>There is something profoundly satisfying about sharing a meal.</p>
+          <img src="img/meat_burger.png" alt="meat burger" />
+        </div>
       </div>
     </div>
-
   </body>
 </html>
