--- a/index.html
+++ b/index.html
@@ -62,37 +62,49 @@
     <div class="burger_menu">
       <h1>Explore Menu</h1>
       <div id="burger_rows">
-        <div id=burger_1>
+        <div id="burger_1">
           <h2>Burger Name</h2>
           <p>There is something profoundly satisfying about sharing a meal.</p>
           <img src="img/meat_burger.png" alt="meat burger" />
         </div>
-        <div id=burger_2>
+        <div id="burger_2">
           <h2>Burger Name</h2>
           <p>There is something profoundly satisfying about sharing a meal.</p>
           <img src="img/meat_burger.png" alt="meat burger" />
         </div>
-        <div id=burger_3>
+        <div id="burger_3">
           <h2>Burger Name</h2>
           <p>There is something profoundly satisfying about sharing a meal.</p>
           <img src="img/meat_burger.png" alt="meat burger" />
         </div>
-        <div id=burger_1>
+        <div id="burger_1">
           <h2>Burger Name</h2>
           <p>There is something profoundly satisfying about sharing a meal.</p>
           <img src="img/meat_burger.png" alt="meat burger" />
         </div>
-        <div id=burger_2>
+        <div id="burger_2">
           <h2>Burger Name</h2>
           <p>There is something profoundly satisfying about sharing a meal.</p>
           <img src="img/meat_burger.png" alt="meat burger" />
         </div>
-        <div id=burger_3>
+        <div id="burger_3">
           <h2>Burger Name</h2>
           <p>There is something profoundly satisfying about sharing a meal.</p>
           <img src="img/meat_burger.png" alt="meat burger" />
         </div>
       </div>
+    </div>
+    <div class="hot_deals">
+      <h1>Hot deals</h1>
+
+      <img src="" alt="" />
+      <h1>SPECIAL COMBO PACK</h1>
+      <h3>Fries & Drinks</h3>
+      <p>
+        There is something profoundly satisfying about sharing a meal. Eating
+        together, breaking bread together, is one of the oldest and most
+        fundamentally unifying of human experiences.
+      </p>
     </div>
   </body>
 </html>
