--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@
     <div class="hot_deals">
       <h1>Hot deals</h1>
 
-      <img src="" alt="" />
+      <img class="juice" src="img/juice.png" alt="" />
+      <img class="vegan_burger" src="img/vegan_burger.png" alt="">
+      <div class="burger_text">
       <h1>SPECIAL COMBO PACK</h1>
       <h3>Fries & Drinks</h3>
       <p>
         There is something profoundly satisfying about sharing a meal. Eating
         together, breaking bread together, is one of the oldest and most
         fundamentally unifying of human experiences.
-      </p>
+      </p></div>
     </div>
   </body>
 </html>
