add css rule to align items on the hot deals section

--- a/index.html
+++ b/index.html
@@ -108,5 +108,9 @@
         fundamentally unifying of human experiences.
       </p></div>
     </div>
+
+    <div class="contact_us">
+      <h2>Contact Us</h2>
+    </div>
   </body>
 </html>
