add contact section to index.html

--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
 
     <div class="contact_us">
       <h2>Contact Us</h2>
+      <p>
+        There is something profoundly satisfying about sharing a meal.Eating together, breaking bread together,is one of the oldest and most fundamentally unifying of human experiences.
+      </p>
+      <form action="">
+        <input type="email" placeholder="Email">
+        <button>Send</button>
+      </form>
     </div>
   </body>
 </html>
