--- a/index.html
+++ b/index.html
@@ -98,26 +98,60 @@
       <h1>Hot deals</h1>
 
       <img class="juice" src="img/juice.png" alt="" />
-      <img class="vegan_burger" src="img/vegan_burger.png" alt="">
+      <img class="vegan_burger" src="img/vegan_burger.png" alt="" />
       <div class="burger_text">
-      <h1>SPECIAL COMBO PACK</h1>
-      <h3>Fries & Drinks</h3>
-      <p>
-        There is something profoundly satisfying about sharing a meal. Eating
-        together, breaking bread together, is one of the oldest and most
-        fundamentally unifying of human experiences.
-      </p></div>
+        <h1>SPECIAL COMBO PACK</h1>
+        <h3>Fries & Drinks</h3>
+        <p>
+          There is something profoundly satisfying about sharing a meal. Eating
+          together, breaking bread together, is one of the oldest and most
+          fundamentally unifying of human experiences.
+        </p>
+      </div>
     </div>
 
     <div class="contact_us">
       <h2>Contact Us</h2>
       <p>
-        There is something profoundly satisfying about sharing a meal.Eating together, breaking bread together,is one of the oldest and most fundamentally unifying of human experiences.
+        There is something profoundly satisfying about sharing a meal.Eating
+        together, breaking bread together,is one of the oldest and most
+        fundamentally unifying of human experiences.
       </p>
       <form action="">
-        <input type="email" placeholder="Email">
+        <input type="email" placeholder="Email" />
         <button>Send</button>
       </form>
+    </div>
+    <div class="footer">
+      <div class="first_column">
+        <div>
+          <p>Sunday - Thursday</p>
+          <p>4 - 10PM</p>
+        </div>
+        <div>
+          <p>Sunday - Thursday</p>
+          <p>4 - 10PM</p>
+        </div>
+      </div>
+      <div class="second_column">
+        <div>
+          <p>(423) 266-1121</p>
+          <p>801 Chestnut Street | Chattanooga TN 37402</p>
+        </div>
+      </div>
+      <div class="third_column">
+        <div>
+         <h1>FOLLOW</h1>
+         <p>GET THE LATEST NEWS. SIGN UP FOR OUR NEWSLETTERS</p>
+         <p>&at Website Design</p>
+        </div>
+      </div>
+      <div class="fourth_column">
+        <div>
+        <img src="" alt="">
+        <button>Send</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
