add css rule to forma t email input

--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
       </div>
       <div class="third_column">
         <div>
-         <h1>FOLLOW</h1>
+         <h3>FOLLOW</h3>
          <p>GET THE LATEST NEWS. SIGN UP FOR OUR NEWSLETTERS</p>
          <p>&at Website Design</p>
         </div>
       </div>
       <div class="fourth_column">
         <div>
-        <img src="" alt="">
-        <button>Send</button>
-        </div>
+        <img class="instagram" src="img/instagram_logo.png" alt=""></div>
+        <div><button id="send_button">Send</button></div>
+        
       </div>
     </div>
   </body>
