--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           When I was a small boy, my father told me never to recommend a church
           or a woman to anyone. And I have found it wise never to recommend a
           restaurant either. Something always goes wrong with the cheese
-          souffl'e.
+          soufflé.
         </p>
         <button id="order_button">Order Now</button>
       </div>
@@ -141,7 +141,7 @@
       </div>
       <div class="third_column">
         <div>
-         <h3>FOLLOW</h3>
+         <h4>FOLLOW</h4>
          <p>GET THE LATEST NEWS. SIGN UP FOR OUR NEWSLETTERS</p>
          <p>&at Website Design</p>
         </div>
