add css rules for colored highlights

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="intro_paragraph">
-        <h1>Street Food</h1>
+        <h1><span id="street">Street</span> <span id="food">Food</span></h1>
         <h3>We don't play with food</h3>
         <p>
           When I was a small boy, my father told me never to recommend a church
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="burger_menu">
-      <h1>Explore Menu</h1>
+      <h1>Explore <span class="green">Menu</span></h1>
       <div id="burger_rows">
         <div id="burger_1">
           <h2>Burger Name</h2>
@@ -95,12 +95,13 @@
       </div>
     </div>
     <div class="hot_deals">
-      <h1>Hot deals</h1>
+      <h1><span class="green"> Hot deals</span></h1>
 
       <img class="juice" src="img/juice.png" alt="" />
       <img class="vegan_burger" src="img/vegan_burger.png" alt="" />
       <div class="burger_text">
-        <h1>SPECIAL COMBO PACK</h1>
+        <h1><span class="green">SPECIAL COMBO PACK</span></h1>
+        <h4>Burger Pizz</h4>
         <h3>Fries & Drinks</h3>
         <p>
           There is something profoundly satisfying about sharing a meal. Eating
@@ -111,18 +112,16 @@
     </div>
 
     <div class="contact_us">
-      
-        <h2>Contact Us</h2>
-        <p>
-          There is something profoundly satisfying about sharing a meal.Eating
-          together, breaking bread together,is one of the oldest and most
-          fundamentally unifying of human experiences.
-        </p>
-        <form action="">
-          <input type="email" placeholder="Email" />
-          <button>Send</button>
-        </form>
-    
+      <h2>Contact <span class="green">Us</span></h2>
+      <p>
+        There is something profoundly satisfying about sharing a meal.Eating
+        together, breaking bread together,is one of the oldest and most
+        fundamentally unifying of human experiences.
+      </p>
+      <form action="">
+        <input type="email" placeholder="Email" />
+        <button>Send</button>
+      </form>
     </div>
     <div class="footer">
       <div class="first_column">
@@ -145,7 +144,7 @@
         <div>
           <h4>FOLLOW</h4>
           <p>GET THE LATEST NEWS. SIGN UP FOR OUR NEWSLETTERS</p>
-          <p>&at Website Design</p>
+          <p>@Website Design</p>
         </div>
       </div>
       <div class="fourth_column">
